[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/backgrounds/ShootingStar.gd" type="Script" id=1]

[node name="ShootingStar" type="Node2D"]
script = ExtResource( 1 )

[node name="DelayStartTimer" type="Timer" parent="."]
one_shot = true

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 0.02
autostart = true
[connection signal="timeout" from="DelayStartTimer" to="." method="_on_DelayStartTimer_timeout"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_MoveTimer_timeout"]
